name:                lifted-async-extra
version:             0.1.0.0
synopsis:            Extra functions for lifted-async.
description:         forConcurrently & mapConcurrently with fixed size thread pool.
homepage:            https://github.com/pbogdan/lifted-async-extra
author:              Piotr Bogdan
maintainer:          ppbogdan@gmail.com
copyright:           2016 Piotr Bogdan
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.Async.Lifted.Extra
  build-depends:       base >= 4.7 && < 5
                     , lifted-base
                     , lifted-async
                     , monad-control
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbogdan/lifted-async-extra
